--- a/DemoAPI_Web/Views/VillaNumber/IndexVillaNumber.cshtml
+++ b/DemoAPI_Web/Views/VillaNumber/IndexVillaNumber.cshtml
@@ -26,10 +26,10 @@
                     <td>@item.Villa.Name</td>
                     <td>@item.VillaNo</td>
                     <td>
-                        <a asp-action="UpdateVillaNumber" asp-route-villaId="@item.VillaNo" class="btn btn-outline-success mx-3" style="width:100px">
+                        <a asp-action="UpdateVillaNumber" asp-route-villaNo="@item.VillaNo" class="btn btn-outline-success mx-3" style="width:100px">
                             <i class="bi bi-pencil-fill"></i>
                         </a>
-                        <a asp-action="DeleteVillaNumber" asp-route-villaId="@item.VillaNo" class="btn btn-outline-danger" style="width:100px">
+                        <a asp-action="DeleteVillaNumber" asp-route-villaNo="@item.VillaNo" class="btn btn-outline-danger" style="width:100px">
                             <i class="bi bi-trash3"></i>
                         </a>
                     </td>
