--- a/DemoAPI_Web/Views/VillaNumber/UpdateVillaNumber.cshtml
+++ b/DemoAPI_Web/Views/VillaNumber/UpdateVillaNumber.cshtml
@@ -1,18 +1,19 @@
-﻿@model DemoAPI_Web.Models.VM.VillaNumberCreateVM
+﻿@model DemoAPI_Web.Models.VM.VillaNumberUpdateVM
 
-<form asp-action="CreateVillaNumber">
+
+<form asp-action="UpdateVillaNumber">
     <br />
     <div class="container border p-3">
-        <h1 class="text-primary">Create Villa Number</h1>
+        <h1 class="text-primary">Update Villa Number</h1>
         <hr />
+        <input asp-for="VillaNumber.VillaNo" hidden />
         <div class="row">
             <div asp-validation-summary="All" class="text-danger"></div>
-
             <div class="col-2">
                 <label asp-for="VillaNumber.VillaNo" class="control-label pt-2" style="font-size:20px;"></label>
             </div>
             <div class="col-10 pb-3">
-                <input asp-for="VillaNumber.VillaNo" class="form-control" />
+                <input asp-for="VillaNumber.VillaNo" disabled  class="form-control" />
                 <span asp-validation-for="VillaNumber.VillaNo" class="text-danger"></span>
             </div>
 
@@ -24,7 +25,7 @@
                     <option disabled selected>--Select Villa--</option>
                 </select>
                 <span asp-validation-for="VillaNumber.VillaID" class="text-danger"></span>
-                
+
             </div>
 
             <div class="col-2">
@@ -39,7 +40,7 @@
                 <a asp-action="IndexVillaNumber" class="btn btn-primary form-control">Back to list</a>
             </div>
             <div class="col-5">
-                <input type="submit" value="Create" class="bnt btn-success form-control" />
+                <input type="submit" value="Update" class="bnt btn-success form-control" />
             </div>
         </div>
     </div>
