--- a/DemoAPI_Web/Views/Shared/_Layout.cshtml
+++ b/DemoAPI_Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@using DemoAPI_Utility;
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor httpAcc
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -30,6 +33,24 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="VillaNumber" asp-action="IndexVillaNumber">Villa Number</a>
                         </li>
+
+                        @if (httpAcc.HttpContext.Session.GetString(SD.SessionToke) != null &&
+                            httpAcc.HttpContext.Session.GetString(SD.SessionToke).ToString().Length > 0
+                        )
+                        { 
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-area="" asp-controller="Auth" asp-action="Logout">Logout</a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-area="" asp-controller="Auth" asp-action="Login">Login</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-area="" asp-controller="Auth" asp-action="Register">Register</a>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
