--- a/DemoAPI_Web/Views/Auth/Register.cshtml
+++ b/DemoAPI_Web/Views/Auth/Register.cshtml
@@ -17,7 +17,7 @@
                 <input asp-for="Name" type="text" class="form-control" placeholder="Name..." />
             </div>
             <div class="col-6 offset-3 pb-2">
-                <input asp-for="Password" type="text" class="form-control" placeholder="Password..." />
+                <input asp-for="Password" type="password" class="form-control" placeholder="Password..." />
             </div>
             <div class="col-6 offset-3 pb-2">
                 <button type="submit" class="form-control btn-success" value="Submit">Register</button>
