--- a/DemoAPI_Web/Views/Auth/Register.cshtml
+++ b/DemoAPI_Web/Views/Auth/Register.cshtml
@@ -19,9 +19,13 @@
             <div class="col-6 offset-3 pb-2">
                 <input asp-for="Password" type="password" class="form-control" placeholder="Password..." />
             </div>
+            <div class="col-6 offset-3 pb-3">
+                <select asp-for="Role" class="form-select" asp-items="@ViewBag.RoleList">
+                    <option disable selected>--Select Role--</option>
+                </select>
+            </div>
             <div class="col-6 offset-3 pb-2">
                 <button type="submit" class="form-control btn-success" value="Submit">Register</button>
-
             </div>
 
         </div>
